--- a/Task_fourteen.html
+++ b/Task_fourteen.html
@@ -1,41 +1,44 @@
-<!doctype html>
-<html>
+
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Task_fourteen</title>
+    <meta charset="UTF-8">
+    <title>IFE 任务14 wdss小组</title>
 </head>
 <body>
 <h3>污染城市列表</h3>
 <ul id="aqi-list">
-  <!--
-    <li>第一名：福州（样例），10</li>
-    <li>第二名：福州（样例），10</li>
-  -->
+    <!--
+        <li>第一名：福州（样例），10</li>
+          <li>第二名：福州（样例），10</li> -->
 </ul>
+
 <script type="text/javascript">
   var aqiDate = [
-      ["北京",90],
-	  ["上海",50],
-	  ["福州",10],
-	  ["广州",50],
-	  ["成都",90],
-	  ["西安",100]
+       ["北京",90],
+	   ["上海",50],
+	   ["福州",10],
+	   ["广州",50],
+	   ["成都",90],
+	   ["西安",100]
   ];
-  (function() {
-	    //选出空气质量指数大于60的城市，使用filter函数
-		var sortCount = aqiDate.filter(function(item){
-			   return (item[1]>60);
-			});
-	    //对于大于60的城市进行排序
-		sortCount.sort(function(a,b){
-			  return b[1] - a[1];
-			});
-		var aqiList = document.getElementById("aqi-list");
-		//输出结果
-		for(var i=0;i<sortCount.length;i++){
-			aqiList.innerHTML+="<li>第"+(i+1)+"名："+sortCount[i][0]+"（样例）,"+sortCount[i][1]+"</li>";
-			}
-	  })();
+    (function () {
+        /*
+         在注释下方编写代码
+         遍历读取aqiData中各个城市的数据
+         将空气质量指数大于60的城市显示到aqi-list的列表中
+          */
+        //选出空气质量指数大于60的城市
+        var sortCount = aqiDate.filter(function(item){return (item[1] > 60); }).sort(function(a, b){
+   return b[1] - a[1];});
+        //对大于60的城市进行排序
+     
+        var aqiList = document.getElementById('aqi-list');
+        //将结果显示
+        for(var i = 0; i < sortCount.length; i++){
+            aqiList.innerHTML += '<li>第' + (i + 1) + '名：' + sortCount[i][0] + '(样例) , ' + sortCount[i][1] + '</li>'; 
+        }
+    })();
 </script>
 </body>
 </html>
